Выполнить ФЗ 12. Настроить приложение для работы с H2 БД.