@@ -1,81 +1,94 @@
 package ru.yandex.practicum.filmorate.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.film.FilmDto;
+import ru.yandex.practicum.filmorate.dto.film.NewFilmRequest;
+import ru.yandex.practicum.filmorate.dto.film.UpdateFilmRequest;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.mapper.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.storage.film.FilmDbStorage;
+import ru.yandex.practicum.filmorate.storage.user.UserDbStorage;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+
+@Slf4j
 @Service
 public class FilmService {
-    private final FilmStorage filmStorage;
-    private final UserStorage userStorage;
 
-    @Autowired
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
-        this.filmStorage = filmStorage;
-        this.userStorage = userStorage;
+    private final FilmDbStorage filmDbStorage; // Для специфичных методов
+    private final FilmMapper filmMapper;
+    private final UserDbStorage userDbStorage;
+
+
+    public FilmService(
+            @Qualifier("filmDbStorage") FilmDbStorage filmDbStorage,
+            FilmMapper filmMapper, UserDbStorage userDbStorage) {
+        this.filmDbStorage = filmDbStorage;
+        this.filmMapper = filmMapper;
+        this.userDbStorage = userDbStorage;
     }
 
-    public Film createFilm(Film film) {
-        return filmStorage.createFilm(film);
+
+    public FilmDto createFilm(NewFilmRequest request) {
+        log.info("Попытка создания нового фильма");
+        Film film = filmMapper.mapToFilm(request);
+        Film createdFilm = filmDbStorage.createFilm(film);
+        log.info("Фильм успешно создан: {}", film);
+        return filmMapper.mapToFilmDto(createdFilm);
     }
 
-    public Film updateFilm(Film updatedFilm) {
-        Integer id = updatedFilm.getId();
-        if (id == null || filmStorage.getById(id).isEmpty()) {
-            throw new NotFoundException("Фильм с ID " + id + " не найден.");
+
+    public FilmDto updateFilm(UpdateFilmRequest request) {
+        log.info("Попытка обновления фильма");
+        Film existingFilm = filmDbStorage.getById(request.getId())
+                .orElseThrow(() -> new NotFoundException("Фильм не найден"));
+        existingFilm = filmMapper.updateFromRequest(existingFilm, request);
+        existingFilm = filmDbStorage.updateFilm(existingFilm);
+        return filmMapper.mapToFilmDto(existingFilm);
+    }
+
+
+    public List<FilmDto> getAllFilms() {
+        return filmDbStorage.getAll().stream()
+                .map(filmMapper::mapToFilmDto)
+                .toList();
+    }
+
+
+    public Optional<FilmDto> getFilmById(Integer id) {
+        return filmDbStorage.getById(id)
+                .map(filmMapper::mapToFilmDto);
+    }
+
+
+    public void addLike(Integer filmId, Integer userId) {
+        Optional<Film> optionalFilm = filmDbStorage.getById(filmId);
+        Optional<User> optionalUser = userDbStorage.getById(userId);
+        if (optionalFilm.isPresent()) {
+            Film film = optionalFilm.get();
+            if (optionalUser.isPresent()) {
+                User user = optionalUser.get();
+                film.getLikes().add(user.getId());
+            }
         }
-        Film existingFilm = filmStorage.getById(id).get();
-        if (updatedFilm.getName() != null) {
-            existingFilm.setName(updatedFilm.getName());
-        }
-        if (updatedFilm.getDescription() != null) {
-            existingFilm.setDescription(updatedFilm.getDescription());
-        }
-        if (updatedFilm.getReleaseDate() != null) {
-            existingFilm.setReleaseDate(updatedFilm.getReleaseDate());
-        }
-        if (updatedFilm.getDuration() != null) {
-            existingFilm.setDuration(updatedFilm.getDuration());
-        }
-        return filmStorage.updateFilm(existingFilm);
+        filmDbStorage.addLike(filmId, userId);
     }
 
-    public Optional<Film> getById(int id) {
-        return filmStorage.getById(id);
+
+    public void removeLike(Integer filmId, Integer userId) {
+        filmDbStorage.removeLike(filmId, userId);
     }
 
-    public List<Film> getAll() {
-        return filmStorage.getAll();
-    }
 
-    public void addLike(int filmId, int userId) {
-        Film film = filmStorage.getById(filmId)
-                .orElseThrow(() -> new NotFoundException("Фильм с ID " + filmId + " не найден."));
-        userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь с ID " + userId + " не найден."));
-        film.getLikes().add(userId);
-    }
-
-    public void removeLike(int filmId, int userId) {
-        Film film = filmStorage.getById(filmId)
-                .orElseThrow(() -> new NotFoundException("Фильм с ID " + filmId + " не найден."));
-        userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь с ID " + userId + " не найден."));
-        film.getLikes().remove(userId);
-    }
-
-    public List<Film> getPopularFilms(int count) {
-        return filmStorage.getAll().stream()
-                .sorted(Comparator.comparingInt(film -> -film.getLikes().size()))
-                .limit(count)
-                .collect(Collectors.toList());
+    public List<FilmDto> getPopular(int count) {
+        return filmDbStorage.getPopular(count).stream()
+                .map(filmMapper::mapToFilmDto)
+                .toList();
     }
 }
